arregle un par de cosas pero desaparece la tarjeta, hay que cheuquearlo y no se que puede llegar a ser

--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -67,9 +67,17 @@
                 <h2>Tareas Realizadas</h2>
                 <div class="grupo-botones-tareas">
                     <div class="contenedor-tarea">
-                        <button class="texto-tarea">Llama a Irene</button>
-                        <button class="circulo-mini">Hoy</button>
-                        <button class="circulo-mini">17:30</button>
+                        <div class="contenedor-tarea">
+                            <a href="/FrontEnd/Tareas Realizadss/Realizadas.html" class="texto-tarea">
+                                Llama a Irene
+                            </a>
+                            <a href="/FrontEnd/Tareas Realizadss/Realizadas.html" class="circulo-mini">
+                                Hoy
+                            </a>
+                            <a href="/FrontEnd/Tareas Realizadss/Realizadas.html" class="circulo-mini">
+                                17:30
+                            </a>
+                        </div>
                     </div>
                    
                 </div>
