--- a/FrontEnd/Recordatorios salir casa/Casa.html
+++ b/FrontEnd/Recordatorios salir casa/Casa.html
@@ -82,6 +82,15 @@
             </div>
         </div>
     </div>
+    <div class="modal" id="modalObjeto">
+        ...
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/JZylber/SoqueTIC-Client@v1.4.2/soquetic-client.js"></script>
+    <script src="casa.js"></script>
+</body>
+</html>
 
     <script src="casa.js"></script>
 </body>
