cambie cositas de diesño

--- a/FrontEnd/Recordatorios diarios/Diarios.html
+++ b/FrontEnd/Recordatorios diarios/Diarios.html
@@ -34,7 +34,7 @@
 
     <div class="contenido">
       <div class="header">
-        <h1>RECORDATORIOS DIARIOS</h1>
+        <h1>RECORDATORIOS RECURRENTES</h1>
       </div>
 
       <div class="contenedor-objetos">
