--- a/FrontEnd/Recordatorios diarios/Diarios.html
+++ b/FrontEnd/Recordatorios diarios/Diarios.html
@@ -107,9 +107,11 @@
       <button class="btn-cancelar" onclick="cerrarModal()">CANCELAR</button>
 
     </div>
-
   </div>
 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/JZylber/SoqueTIC-Client@v1.4.2/soquetic-client.js"></script>
   <script src="Diarios.js"></script>
 </body>
 </html>
+
