--- a/FrontEnd/crear cuenta/CC.HTML
+++ b/FrontEnd/crear cuenta/CC.HTML
@@ -23,7 +23,7 @@
         <input class="campo" type="text" placeholder="Crea nombre de usuario">
         <input class="campo" type="password" placeholder="Crea contraseña">
 
-        <button class="boton-confirmar">
+        <button class="boton-confirmar" type="button">
             Confirmar
         </button>
 
